# spatialreasoners

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup_utils.py
.github/workflows/: run-tests.yml
config/: generate_latent_dataset.yaml  main.yaml
config/dataset/: README.md  celeba.yaml  cifar10.yaml  counting_polygons_blank.yaml  counting_polygons_blank_ambiguous_conditional.yaml  counting_polygons_blank_explicit_conditional.yaml  counting_polygons_ffhq.yaml  counting_polygons_ffhq_ambiguous_conditional.yaml  counting_polygons_ffhq_explicit_conditional.yaml  counting_stars_blank.yaml  counting_stars_blank_no_nums.yaml  counting_stars_ffhq.yaml  counting_stars_ffhq_no_nums.yaml  even_pixels.yaml  ffhq.yaml  imagenet256.yaml  imagenet64.yaml  mnist.yaml  mnist_sudoku_top1000.yaml  mnist_sudoku_top1000_easy.yaml  mnist_sudoku_top1000_hard.yaml  mnist_sudoku_top1000_medium copy.yaml  realestate10k.yaml
config/denoising_model/: README.md
config/denoising_model/denoiser/: denoiser.yaml  dit.yaml  dit_b_2.yaml  dit_l_2.yaml  dit_s_2.yaml  dit_xl_2.yaml  lightningdit.yaml  lightningdit_xl.yaml  mar.yaml  mar_b.yaml  mar_h.yaml  mar_l.yaml  spiral_mlp.yaml  u_vit3d_pose.yaml  u_vit3d_pose_sm.yaml  unet.yaml  unet_128.yaml  unet_128_imagenet.yaml  unet_128_lite.yaml  unet_256.yaml  unet_28.yaml  unet_32.yaml  unet_32_cifar10.yaml  unet_32_ldm.yaml  unet_32_lite.yaml  unet_64.yaml  unet_64_imagenet.yaml  xar.yaml  xar_b.yaml  xar_h.yaml  xar_l.yaml
config/denoising_model/flow/: continuous_cosine_logsnr.yaml  cosine.yaml  diffusion.yaml  original_diffusion.yaml  rectified.yaml
config/experiment/: README.md  api_default.yaml  even_pixels.yaml  mnist_sudoku.yaml  mnist_sudoku_unet.yaml  realestate10k.yaml
config/experiment/benchmark/: counting_polygons_blank_1000.yaml  even_pixels_100.yaml  even_pixels_1000.yaml  mnist_sudoku_top1000.yaml  mnist_sudoku_top1000_easy.yaml  mnist_sudoku_top1000_hard.yaml  mnist_sudoku_top1000_medium.yaml  realestate10k_20.yaml
config/inference_sampler/: inference_sampler.yaml  scheduled_sampler.yaml
config/inference_sampler/cfg_scheduler/: constant.yaml  linear.yaml
config/inference_sampler/sampling_schedule/: adaptive_inverse.yaml  adaptive_sequential.yaml  adaptive_softmax.yaml  fixed.yaml  graph_sequential.yaml  mask_git.yaml  random_sequential.yaml  raster.yaml
config/optimizer/: README.md  default.yaml  dit.yaml  mar_tune.yaml  vrm.yaml
config/time_sampler/: README.md  independent.yaml  mean_beta.yaml  sequential.yaml  shared.yaml
config/time_sampler/time_weighting/: logit_normal.yaml
config/variable_mapper/: README.md  image.yaml  video_pose.yaml
config/variable_mapper/autoencoder/: kl_16.yaml  kl_16_mar.yaml  kl_16_vavae.yaml  kl_8.yaml
docs/: api.md  changelog.md  index.md
docs/components/: denoising-model.md  variable-mapper.md
docs/getting-started/: installation.md  quick-tour.md
example_project/: README.md  test_decorator.py  training_decorator.py  training_programmatic.py
example_project/configs/: main_spiral.yaml
example_project/configs/dataset/: spiral.yaml
example_project/configs/experiment/: spiral_test.yaml  spiral_training.yaml
example_project/configs/variable_mapper/: spiral.yaml
example_project/src/: __init__.py  dataset.py  denoiser.py  evaluation.py  tokenizer.py  variable_mapper.py
examples/: basic_usage.py  hydra_cli_usage.py
notebooks/: pregenerate_counting_positions.ipynb
spatialreasoners/: __init__.py  _main.py  api.py  config.py  env.py  global_cfg.py  main.py  registry.py  type_extensions.py
spatialreasoners/benchmark/: __init__.py  benchmark.py
spatialreasoners/benchmark/evaluation/: __init__.py  evaluation.py  sampling_evaluation.py  type_extensions.py
spatialreasoners/dataset/: __init__.py  dataset.py
spatialreasoners/dataset/dataset_image/: __init__.py  dataset_celeba.py  dataset_cifar10.py  dataset_even_pixels.py  dataset_ffhq.py  dataset_grid.py  dataset_image.py  (+6 more)
spatialreasoners/denoising_model/: __init__.py  denoising_model.py  type_extensions.py
spatialreasoners/misc/: counting_polygons_classifier.py  dict_utils.py  image_io.py  latent_saver.py  local_logger.py  mnist_classifier.py  nn_module_tools.py  step_tracker.py  tensor.py  time_tester.py  utils.py  wandb_tools.py
spatialreasoners/scripts/: dit_ckpt_mapping.py  lightningdit_ckpt_mapping.py  mar_ckpt_mapping.py  vae_ckpt_mapping.py  xar_ckpt_mapping.py
spatialreasoners/training/: __init__.py  data_module.py  srm_lightning_module.py
spatialreasoners/variable_mapper/: __init__.py  image_variable_mapper.py  sudoku_variable_mapper.py  variable_mapper.py  video_pose_variable_mapper.py
spatialreasoners/visualization/: annotation.py  color_map.py  layout.py
tests/: registry_test.py
tests/sampler/: scheduled_sampler_test.py
(+166 files in other folders)
